[package]
name = "dayz-launcher"
version = "0.1.0"
edition = "2021"
authors = ["Paweł Harasymowicz <owner@gmshage.com>"]
description = "Niestandardowy launcher dla DayZ"

[dependencies]
# Framework GUI — natywne okno, renderowanie przez GPU
eframe = { version = "0.27", features = ["default_fonts"] }
egui = "0.27"

# Kolory z przezroczystością (używamy do budowania UI)
egui_extras = "0.27"

# Asynchroniczne żądania HTTP (pobieranie listy serwerów, aktualizacje)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Serializacja/deserializacja danych (JSON ↔ struktury Rust)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Obsługa błędów — zamiast panikować, zwracamy ładne komunikaty
anyhow = "1"

# Wielowątkowość — odpytujemy serwery w tle, nie blokując UI
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Zapis/odczyt pliku konfiguracyjnego profilu
dirs = "5"                  # ścieżki systemowe: AppData, HOME itp.

# Logowanie zdarzeń do konsoli/pliku
log = "0.4"
env_logger = "0.11"

[profile.release]
# Optymalizacje przy budowaniu wersji finalnej
opt-level = 3
lto = true          # Link-Time Optimization — mniejszy plik .exe
strip = true        # Usuwa symbole debugowania z .exe
